# OOP_Mayka_labs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lab01/: 1lab.cpp  CMakeLists.txt  perevod.cpp  perevodik.cpp
lab01/include/: perevod.h  perevodik.h
lab01/tests/: lab1_tests.cpp
lab02/: CMakeLists.txt
lab02/include/: laba2.h
lab02/src/: laba2.cpp  three.cpp
lab02/tests/: lab2_tests.cpp
lab03/: CMakeLists.txt
lab03/include/: array.h  figure.h  hexagon.h  pentagon.h  points.h  rhombus.h
lab03/src/: array.cpp  hexagon.cpp  main.cpp  pentagon.cpp  points.cpp  rhombus.cpp
lab03/tests/: #include <iostream>.ini  test.cpp
lab04/: CMakeLists.txt
lab04/include/: array.h  figure.h  hexagon.h  pentagon.h  points.h  rhombus.h
lab04/src/: main.cpp
lab04/tests/: test.cpp
lab05/: CMakeLists.txt
lab05/include/: allocator.h  queue.h
lab05/src/: main.cpp
lab05/test/: test.cpp
lab06/: CMakeLists.txt
lab06/include/: NPC.h  elf.h  knight.h  robber.h
lab06/src/: NPC.cpp  elf.cpp  knight.cpp  main.cpp  robber.cpp
lab07/: CMakeLists.txt
lab07/include/: NPC.h  elf.h  knight.h  robber.h
lab07/src/: NPC.cpp  elf.cpp  knight.cpp  main.cpp  robber.cpp
